refactor: schedule API 수정